[package]
name = "find-web-session-challenge"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"

[dependencies.neon]
features = ["napi-6"]

[[bin]]
name = "find-web-session-challenge"
path = "main.rs"
